- adapted code to be compatible with java 11